# multilingual-gemma

./: .gitignore  README.md  pyproject.toml
src/multilingual_gemma/: __init__.py
src/notebooks/: dataset_generation.ipynb
