[project]
name = "multilingual-gemma"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ShinnosukeUesaka", email = "45286939+ShinnosukeUesaka@users.noreply.github.com" }
]
#  "mysuperlib @ file:///${PROJECT_ROOT}/../mysuper",

dependencies = [
    "ipykernel>=6.29.5",
    "requests>=2.32.3",
    "pip>=24.3.1",
    "datasets>=3.2.0",
    "lingua-language-detector>=2.0.2",
    "ipywidgets>=8.1.5",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/multilingual_gemma"]
